Fixed spacing for full page sections

--- a/docs/CSS/style.css
+++ b/docs/CSS/style.css
@@ -83,9 +83,9 @@ ul {
 .arrowLink {
     display: flex;
     flex-direction: column-reverse;
-    margin-bottom: 7%;
     text-align: center;
     text-decoration: none;
+    padding-bottom: 5%;
 }
 
 .arrowLink .arrowLinkText {
@@ -156,7 +156,7 @@ header #primaryNav li a:hover{
 /* Full Page Sections */
 
 .fullPageSection {
-    height: 90vh;
+    height: 98vh;
     display: flex;
     flex-direction: column-reverse; /* for arrow links to align bottom */
 }
@@ -181,7 +181,7 @@ header #primaryNav li a:hover{
     display: flex;
     flex-direction: column;
     gap: 100px;
-    padding: 100px 0px 100px 0px;
+    padding: 150px 0px 150px 0px;
 }
 
 #projects .projectCard {
@@ -221,10 +221,6 @@ header #primaryNav li a:hover{
     justify-content: space-between;
 }
 
-#aboutHero .absoluteCenteredContent #aboutText #aboutAltText{
-    color: var(--accentPrimary);
-}
-
 #aboutHero .absoluteCenteredContent img {
     width: 481px;
     height: 410px;
@@ -245,30 +241,19 @@ header #primaryNav li a:hover{
     text-transform: lowercase;
 }
 
-#aboutHero .absoluteCenteredContent #skillsGrid .skillType {
-    color: var(--accentSecondary);
-}
-
 /* About: Background */
 
-#aboutBackground {
+#aboutBackground .absoluteCenteredContent {
+    top: 150%;
     text-align: center;
     display: flex;
     flex-direction: column;
     gap: 50px;
 }
 
-#aboutBackground #backgroundTitle {
+#aboutBackground .absoluteCenteredContent #backgroundTitle {
     display: flex;
     justify-content: space-between;
-}
-
-#aboutBackground #backgroundTitle #titleAlt {
-    color: var(--accentPrimary);
-}
-
-#aboutBackground h1 {
-    color: var(--accentPrimary);
 }
 
 /* Footer  */
@@ -286,7 +271,6 @@ footer h1 {
     font-size: 40px;
     font-weight: 600;
     letter-spacing: -0.05em;
-    color: var(--accentSecondary);
 }
 
 #footerItems {
